--- a/Animationen.Rmd
+++ b/Animationen.Rmd
@@ -76,7 +76,9 @@ Landkreise_merged %>%
   facet_wrap(~Jahr)
 ```
 
-<code>transition_states(</code>)
+# (1) *Zustände* mit <code>transition_states()</code>
+
+## Minimalbeispiel
 
 In der Minimalversion müssen wir nur eine Zeile ändern. In <code>transition_states</code> wird der *Animationszustand* eingefügt, in unserem Fall die Beobachtungsjahre.
 
@@ -89,7 +91,10 @@ Landkreise_merged %>%
   transition_states(states = Jahr) 
 ```
 
-AHA! Es bewegt sich was! Wir wissen allerdings nicht wirklich, was sich tut. Um besser zu verstehen, was die verschiedenen Zustände darstellen, können wir dynamische Labels verwenden. Innerhalb der geschweiften Klammern wird dann der jeweilige *Animationszustand* angezeigt. <code>{closest_state}</code> kann zum Beispiel in die (Unter)überschrift einer Abbildung eingefügt werden.
+
+## Dynamische Beschriftungen mit <code>{closest_state}</code>
+
+AHA! Es bewegt sich was! Wir wissen allerdings nicht wirklich, was sich tut. Um besser zu verstehen, was die verschiedenen Zustände darstellen, können wir dynamische Labels verwenden. Innerhalb der geschweiften Klammern wird dann der jeweilige *Animationszustand* angezeigt. <code>{closest_state}</code> kann zum Beispiel in die (Unter)überschrift einer Abbildung eingefügt werden. Das Schöne an <code>gganimate</code> ist es, dass die <code>ggplot</code> weitestgehend übernommen werden kann.
 
 ```{r}
 Landkreise_merged %>% 
@@ -101,30 +106,41 @@ Landkreise_merged %>%
   labs(subtitle = "Jahr: {closest_state}") #<--nimmt Werte aus states-Argument vom transition_states()
 ```
 
-Das schöne an <code>gganimate</code> ist es, dass die <code>ggplot</code> weitestgehend übernommen werden kann.
-
-# ```{r}
-# Landkreise_merged %>% 
-#   filter(!is.na(BIP)) %>% 
-#   filter(!is.na(Arbeitslosenquote)) %>% 
-#   ggplot(aes(x = BIP, y = Arbeitslosenquote, color = Aggregat)) +
-#   geom_point() +
-#   facet_wrap(~Aggregat) +
-#   transition_states(states = Jahr) +
-#   labs(subtitle = "Jahr: {closest_state}") #<--nimmt Werte aus states-Argument vom transition_states()
-# ```
-
-Die Übergänge sind noch etwas zittrig. Die Übergangszeiten lassen sich als Argumente von <code>transtion_states()</code> anpassen. <code>transtion_length</code> gibt die relative Zeit der Animation an, die für Übergänge verwendet werden soll und <code>transtion_lenth</code> die Zeit, die für die Zustände verwendet wird.
+Die Übergänge sind noch etwas zittrig. Die Übergangszeiten lassen sich als Argumente von <code>transtion_states()</code> anpassen. <code>transtion_length</code> gibt die relative Zeit der Animation an, die für Übergänge verwendet werden soll und <code>transtion_lenth</code> die Zeit, die für die Zustände verwendet wird. Deutlich wird die Funktionsweise, wenn wir weniger *Zustände* nutzen. 
 
 ```{r}
 Landkreise_merged %>% 
-  filter(!is.na(BIP)) %>% 
-  filter(!is.na(Arbeitslosenquote)) %>% 
+  filter(Jahr %in% c(2000, 2017)) %>% #nur auf Start und Endjahr filtern
   ggplot(aes(x = BIP, y = Arbeitslosenquote)) +
   geom_point() +
   transition_states(states = Jahr,
-                    transition_length = 9, 
-                    state_length = 1) +
+                    transition_length = 9, #9/10 der Zeit für Übergänge
+                    state_length = 1) + #1/10 für Zustände
   labs(subtitle = "Jahr: {closest_state}") #<--nimmt Werte aus states-Argument vom transition_states()
 ```
+
+## Übergänge gestalten mit <code>ease_aes()</code>
+
+Mit <code>ease_aes()</code> lassen sich Übergänge noch ansprechender gestalten. Standardmäßig sind die Übergänge <code>linear</code>. Es stehen aber zahlreiche andere Optionen zur Verfügung, wie z.B. <code>elastic</code>, <code>bounce</code> oder <code>exponential</code>. 
+
+Zusätzlich können die Übergänge durch ein Suffix weiter angepasst werden. Dabei gibt es drei Optionen, von denen **mindestens eine** gewählt werden muss. 
+
+* <code>-in</code> Standardfall.
+* <code>-out</code> Umgekehrtes Verhalten.
+* <code>-in-out</code> In der ersten Hälfte des Übergangs Standardfall, in der zweiten umgekehrt.
+
+```{r}
+Landkreise_merged %>% 
+  filter(Jahr %in% c(2000, 2017)) %>% #nur auf Start und Endjahr filtern
+  ggplot(aes(x = BIP, y = Arbeitslosenquote)) +
+  geom_point() +
+  transition_states(states = Jahr) +
+  ease_aes("elastic-in-out") +
+  labs(subtitle = "Jahr: {closest_state}") #<--nimmt Werte aus states-Argument vom transition_states()
+```
+
+
+
+
+
 
